added Game, Player and NewGameCommand

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     implementation 'net.dv8tion:JDA:4.1.1_137'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 application {
